--- a/room-gtw/Dockerfile
+++ b/room-gtw/Dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update && apt-get install -y \
     libglib2.0-dev
 
 ADD requirements.txt .
-ADD gtw.py .
+ADD room-gtw.py .
+ADD .env .
 RUN pip3 install -r requirements.txt
 
 CMD python3 gtw.py
